css/products-compare.css
/* Products Compare page styles here */
.page-container {
  padding-top: 0;
}
body.scrolled .page-container section.product-details {
  padding-top: 324px;
}
.page-container > header {
  position: static !important;
  z-index: 1;
}
.compare-page .details-content .sidebar {
  transition: none;
}
.details-content .sidebar.fix-bar .top-offers-holder {
  top: 0;
}
h1.comparable-prods-titles {
  display: flex;
  align-items: center;
}
h1.comparable-prods-titles span {
  text-transform: uppercase;
  font-size: 12px;
  color: #AAAAAA;
  font-weight: 400;
  margin: 0 12px;
}
.compare-holder {
  position: relative;
}
.comparing-container {
  background-color: #FFFFFF;
  transition: all .3s ease;
}
.compare-products {
  display: flex;
  justify-content: space-between;
  margin: 0 -6px;
  padding: 30px 0 18px;
}
.compare-products .comparable-product {
  min-width: 33%;
  flex-grow: 1;
  padding: 0 6px;
}
.comparable-product .comparing-info {
  padding: 12px;
  border-top: 1px solid #eeeeee;
  display: flex;
  justify-content: space-between;
}
.comparing-info .c-item {
  width: 33%;
  text-align: center;
  color: #666666;
  position: relative;
}
.comparing-info .c-item::before {
  display: block;
  content: '';
  position: absolute;
  width: 1px;
  height: 100%;
  left: 0;
  top: 0;
  background-color: #eeeeee;
}
.comparing-info .c-item:first-of-type::before {
  display: none;
}
.c-item .c-title {
  font-size: 14px;
  padding-bottom: 3px;
}
.c-item .c-value {
  font-size: 18px;
  color: #333333;
}
.comparable-product .remove-from-compare {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  right: -6px;
  top: -12px;
  width: 24px;
  height: 24px;
  background-color: #e5e5e5;
  color: #FFFFFF;
  border-radius: 50%;
  cursor: pointer;
  z-index: 3;
}
.comparing-parameters {
  display: flex;
  padding-top: 12px;
  border-top: 1px solid #eeeeee;
  margin-top: 18px;
}
.comparing-parameters .compare-param {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 18px;
  color: #939393;
  font-size: 16px;
}
.comparing-parameters .compare-param i {
  font-size: 16px;
  margin-bottom: 12px;
}
.comparing-block {
  padding: 18px;
}
.comparing-block h4 {
  font-size: 20px;
  font-weight: 400;
  padding-bottom: 12px;
}
.comparing-block h3 {
  font-size: 24px;
  font-weight: 400;
  padding: 18px 12px;
}
.comparing-block p {
  padding-bottom: 12px;
}
.comparing-container.fix-comparing {
  position: fixed;
  top: 0;
  width: 840px;
  box-shadow: 0 6px 15px -2px rgba(0, 0, 0, 0.38);
  transition: all .3s ease;
  z-index: 3;
}
.comparing-container.fix-comparing .comparing-parameters {
  border-top: none;
  margin-top: 0;
}
.comparing-container.fix-comparing .compare-products {
  margin: 0;
  padding: 18px 6px;
}
/*.comparing-container.fix-comparing .product-item .wish-or-compare,*/
.comparing-container.fix-comparing .product-item .product-params,
/*.comparing-container.fix-comparing .product-item .product-rate,
.comparing-container.fix-comparing .product-item .best-deal,*/
.comparing-container.fix-comparing .product-item .more,
.comparing-container.fix-comparing .product-item .product-additional-info,
/*.comparing-container.fix-comparing .product-item .category-name,*/
.comparing-container.fix-comparing .product-item .comparing-info {
  display: none;
}
.comparing-container.fix-comparing .product-item {
  padding-top: 0;
}
.comparing-container.fix-comparing .product-item .item-info {
  /*flex-direction: row;*/
  padding: 6px;
}
.comparing-container.fix-comparing .product-item .item-info .product-name {
  padding-bottom: 6px;
}
.comparing-container.fix-comparing .product-item .item-info .product-rate {
  padding-bottom: 0;
}
.comparing-container.fix-comparing .product-item .item-info figure {
  margin: 0;
  /*max-width: 48px;*/
}
.comparing-container.fix-comparing .product-item .item-info figure img {
  height: 100px;
}
.comparing-container.fix-comparing .product-item .product-additional-info {
  padding: 6px;
}
/*.comparing-container.fix-comparing .product-item .product-additional-info .product-price {
  display: flex;
  align-items: center;
}
.comparing-container.fix-comparing .product-item .product-additional-info .product-price .current-price {
  margin-left: 6px;
}*/
.comparing-block .compare-table {
  color: #aeadad;
  display: flex;
  flex-wrap: wrap;
  border-bottom: 1px solid #eeeeee;
}
.comparing-block .compare-table .table-col {
  flex-basis: 33.3%;
  flex-grow: 1;
  padding: 18px 12px;
  border-top: 1px solid #eeeeee;
  border-right: 1px solid #eeeeee;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.comparing-block .compare-table .table-col:nth-child(3n) {
  border-right: none;
}
.table-col .compare-icon {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.table-col .compare-icon i {
  font-size: 24px;
  margin-bottom: 6px;
}
.table-col .no-compare-data {
  font-size: 14px;
  font-style: italic;
  color: #CCCCCC;
}
.table-col .table-compare-text {
  align-self: stretch;
  padding: 0 6px;
  font-size: 14px;
}
.table-col .table-compare-text h5 {
  font-size: 18px;
  padding-bottom: 6px;
}
.table-col .table-compare-text p {
  line-height: 19px;
}
.comparing-block .compare-table .table-col.scrolling-list {
  overflow: hidden;
  padding-right: 0;
  align-items: stretch;
  flex-direction: column;
}
.table-col.scrolling-list ul {
  flex-grow: 1;
  flex-basis: 100%;
  width: 100%;
  max-height: 240px;
  overflow-y: auto;
  overflow-x: hidden;
}
.table-col.scrolling-list li {
  padding: 6px 5px 8px 0;
}
.table-col.scrolling-list h6 {
  font-size: 16px;
  font-weight: 400;
  padding-bottom: 3px;
}
.table-col.scrolling-list li .percent-score {
  display: flex;
  align-items: center;
}
li .percent-score span {
  width: 42px;
  color: #61b10c;
  font-size: 13px;
  font-weight: 700;
}
.table-col.scrolling-list li .bar-line-holder {
  flex-grow: 1;
  position: relative;
  height: 4px;
}
.table-col.scrolling-list li .bar-line-holder > div {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: #61b10c;
  border-radius: 2px;
}
.table-col.scrolling-list li .faq-description {
  display: flex;
  align-items: center;
}
.table-col.scrolling-list li .faq-description span  {
  color: #737171;
}
.faq-description i {
  font-size: 20px;
  margin-right: 6px;
  border: 1px solid #e0dadf;
  border-radius: 3px;
  padding: 2px 0;
  width: 31px;
  text-align: center;
}
.other-comparisons-holder {
  display: flex;
  justify-content: space-between;
}
.other-comparisons-holder a {
  width: 49%;
  background-color: #f7f7f7;
  border-radius: 5px;
  padding: 6px 8px;
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
}
.other-comparisons-holder a figure {
  text-align: center;
}
.other-comparisons-holder a figure img {
  width: 90px;
}
.other-comparisons-holder a figure figcaption {
  white-space: nowrap;
  font-size: 13px;
}
.other-comparisons-holder a .versus-vs {
  border-radius: 50%;
  font-weight: 700;
  font-family: Arial, Tahoma, sans-serif;
  font-size: 16px;
  height: 40px;
  width: 40px;
  text-align: center;
  line-height: 40px;
  background: #e9e9e9;
  color: #111;
}
.comparing-block .compare-table.compare-reviews .table-col {
  align-items: stretch;
}
.compare-table.compare-reviews .table-col .no-compare-data {
  align-self: center;
}
.table-col .vs-review-item {
  width: 100%;
}
.table-col .vs-review-item .vs-review-top {
  padding: 0 0 12px 0;
}
.table-col .vs-review-item .vs-review-comment {
  padding: 12px 0 0 0;
}
.table-col .vs-review-item .vs-review-top h5 {
  display: flex;
  align-items: center;
  font-size: 14px;
  padding-bottom: 6px;
}
.table-col .vs-review-item .vs-review-top h5 img {
  width: 50px;
  margin-right: 6px;
}
.table-col .vs-review-item .vs-review-top h5 a {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.table-col .vs-review-item .vs-review-top .vs-review-rate {
  padding-bottom: 6px;
}
.table-col .vs-review-item .vs-review-top .vs-review-rate span {
  font-size: 20px;
}
.table-col .offers-list {
  margin-bottom: 0;
  width: 100%;
}
.table-col .offers-list .top-offer-item {
  align-items: center;
}
.table-col .offers-list .top-offer-item .offer-store {
  display: inline-flex;
  align-items: center;
  padding-left: 6px;
  font-size: 14px;
  line-height: 15px;
}
.table-col .offers-list .top-offer-item .offer-store img {
  margin-right: 6px;
}
.table-col .offers-list .top-offer-item .offer-price {
  margin-left: auto;
}
.compare-news {
  display: flex;
  flex-direction: column;
  font-size: 14px;
  color: #aeadad;
}
.compare-news:hover {
  color: #aeadad;
}
.compare-news .news-title {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: #1f1a21;
  padding-bottom: 3px;
  transition: color .3s ease;
}
.compare-news:hover .news-title {
  color: #ff4136;
}
.compare-news .news-resource {
  display: flex;
  align-items: center;
  font-size: 11px;
  padding-bottom: 3px;
}
.compare-news .news-resource i {
  font-size: 14px;
  margin-left: 6px;
}
.compare-news .news-date {
  font-size: 13px;
}

